<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertOrEditPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/surname"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/age"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:backgroundTint="@color/blue" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:backgroundTint="@color/grey"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:backgroundTint="@color/red"/>
</androidx.constraintlayout.widget.ConstraintLayout>