<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/anthracite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="290dp"
            android:layout_height="290dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:drawableEnd="@drawable/ic_email"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp"
            android:padding="12dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_eye"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/login"
            android:backgroundTint="@color/dark_blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#858585"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="or" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#858585"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="20sp"
            android:text="@string/sign_up"
            android:padding="10dp"
            android:backgroundTint="@color/pink"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>